--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "mongoose": "^5.1.2"
+  },
+  "scripts": {
+    "start": "node app.js"
   }
 }
