--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple todo app",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -18,5 +19,5 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "mongoose": "^5.1.2"
-  }
+  } 
 }
