--- a/app.json
+++ b/app.json
@@ -1,19 +1,8 @@
-<<<<<<< HEAD
 {
-  "name": "Start on Heroku: Node.js",
+  "name": "Start on Herokuapp: Node.js",
   "description": "A barebones Node.js app using Express 4",
   "repository": "https://github.com/Dummy-Developer/Todo_List.git",
   "logo": "https://cdn.rawgit.com/heroku/node-js-getting-started/master/public/node.svg",
   "keywords": ["node", "express", "heroku"],
   "image": "heroku/nodejs"
 }
-=======
-{
-  "name": "Start on Heroku: Node.js",
-  "description": "A barebones Node.js app using Express 4",
-  "repository": "https://github.com/Dummy-Developer/Todo_List.git",
-  "logo": "https://cdn.rawgit.com/heroku/node-js-getting-started/master/public/node.svg",
-  "keywords": ["node", "express", "heroku"],
-  "image": "heroku/nodejs"
-}
->>>>>>> 6cabd7fb3baf3a8fd3c79506e02896a50ee3e66e
